# csv-parakeet

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mutmut_config.py  noxfile.py  pyproject.toml
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: release.yaml  test-pypi.yaml  tests.yaml  tests.yml
src/csv_parakeet/: console.py
src/parakeet/: console.py
tests/: test_console.py
