[tool.poetry]
name = "parakeet"
version = "0.1.0"
description = "Parquet to CSV command line tool"
authors = ["Alfie Bowman <alfiebowman@protonmail.com>"]
readme = "README.md"
homepage = "github.com/A1fus/parakeet"
repository = "github.com/A1fus/parakeet"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^2.0.0"
pyarrow = "^11.0.0"

[tool.poetry.scripts]
parakeet = "parakeet.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
