[tool.poetry]
name = "parakeet"
version = "0.1.0"
description = "Parquet to CSV command line tool"
authors = ["Alfie Bowman <alfiebowman@protonmail.com>"]
readme = "README.md"
homepage = "github.com/A1fus/parakeet"
repository = "github.com/A1fus/parakeet"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^2.0.0"
pyarrow = "^11.0.0"

[tool.poetry.scripts]
parakeet = "parakeet.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["parakeet"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
